pgAdmin/pgadmin-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
 name: pgadmin
spec:
 serviceName: pgadmin-service
 podManagementPolicy: Parallel
 replicas: 1
 updateStrategy:
   type: RollingUpdate
 selector:
   matchLabels:
     app: pgadmin
 template:
   metadata:
     labels:
       app: pgadmin
   spec:
     terminationGracePeriodSeconds: 10
     containers:
      - name: pgadmin
        image: dpage/pgadmin4:latest
        imagePullPolicy: Always
        ports:
         - name: http
           containerPort: 80
           protocol: TCP
        volumeMounts:
         - name: pgadmin-config
           mountPath: /pgadmin4/servers.json
           subPath: servers.json
           readOnly: true
     volumes:
     - name: pgadmin-config
       configMap:
         name: pgadmin-config
