pgAdmin/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pgadmin-client
  namespace: openshift-operators
spec:
  port:
    targetPort: 80
  to:
    kind: Service
    name: pgadmin-service
    weight: 100
  wildcardPolicy: None
